HTML: Updated Img width values CSS: resolved align-items error

--- a/styles/base.css
+++ b/styles/base.css
@@ -12,6 +12,7 @@
     padding: 0;
     box-sizing: border-box;
     text-align: center;
+    text-decoration: none;
 }
 
 /* Header content */
@@ -98,18 +99,11 @@ h3 {
 }
 
 .lists {
-    /* display: inline-block; */
-    align-items: left;
-    /* margin:20px; */
     list-style-type: none;
 }
 
 li {
     text-align: left;
-}
-
-li a {
-    text-decoration: none;
 }
 
 
